# Regression_Analysis_Mobile_App

./: DEPLOY_RENDER.md  render.yaml  requirements.txt
summative/: pyproject.toml
summative/API/: prediction.py
summative/FlutterApp/: .gitignore  README (2).md  README.md  pubspec.yaml
summative/FlutterApp/lib/: config.dart  main.dart
summative/FlutterApp/lib/services/: prediction_service.dart
