[project]
name = "linear-regression-model"
version = "0.1.0"
description = "Multivariate regression + FastAPI service on the OWID energy dataset, predicting per_capita_electricity"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "joblib>=1.4",
    "jupyter>=1.1",
    "ipykernel>=6.29",
    "nbformat>=5.10.4",
    "fastapi>=0.139.2",
    "pydantic>=2",
    "uvicorn[standard]>=0.51.0",
    "python-multipart>=0.0.32",
]

[tool.uv]
package = false
